--- a/modules/ROOT/pages/deployment/extensions/graph-explorer.adoc
+++ b/modules/ROOT/pages/deployment/extensions/graph-explorer.adoc
@@ -3,7 +3,7 @@
 
 :ext_name: graph-explorer
 
-:description: The oCIS Graph Explorer extension provides ...
+:description: The Infinite Scale Graph Explorer extension provides ...
 
 == Introduction
 
