--- a/modules/ROOT/pages/deployment/extensions/groups.adoc
+++ b/modules/ROOT/pages/deployment/extensions/groups.adoc
@@ -3,7 +3,7 @@
 
 :ext_name: groups
 
-:description: The oCIS Group extension provides ...
+:description: The Infinite Scale Group extension provides ...
 
 == Introduction
 
