--- a/modules/ROOT/pages/deployment/extensions/ocs.adoc
+++ b/modules/ROOT/pages/deployment/extensions/ocs.adoc
@@ -3,7 +3,7 @@
 
 :ext_name: ocs
 
-:description: The oCIS OCS extension provides ...
+:description: The Infinite Scale OCS extension provides ...
 
 == Introduction
 
