--- a/modules/ROOT/pages/availability_scaling/availability_scaling.adoc
+++ b/modules/ROOT/pages/availability_scaling/availability_scaling.adoc
@@ -5,13 +5,13 @@
 :gartner_complexity_url: https://blogs.gartner.com/ephraim-baron/how-systems-complexity-reduces-uptime/
 :what_is_kubernetes_url: https://kubernetes.io/docs/concepts/overview/what-is-kubernetes/
 
-:description: There are many ways to achieve availability and scalability, but certain aspects depend on each other and decisions have to be considered carefully to optimize the outcome. This guide gives a brief overview about running a modern, microservices-based software like oCIS as a single or distributed instance.
+:description: There are many ways to achieve availability and scalability, but certain aspects depend on each other and decisions have to be considered carefully to optimize the outcome. This guide gives a brief overview about running a modern, microservices-based software like Infinite Scale as a single or distributed instance.
 
 == Introduction
 
 {description}
 
-Because oCIS is by design enabled to run as a distributed service and not a static monolithic service block, you can achieve availability _and_ scalability with well made decisions. Due to this design, decisions made can always be revised and adapted to new requirements.
+Because Infinite Scale is by design enabled to run as a distributed service and not a static monolithic service block, you can achieve availability _and_ scalability with well made decisions. Due to this design, decisions made can always be revised and adapted to new requirements.
 
 == Terminology
 
@@ -57,7 +57,7 @@ In this quote, three-nines refers to 99.9%, while two-nines means 99%.
 
 === Single Server Setup
 
-If you have oCIS running on the same physical or virtual server where its configuration and the user data is located, a hard- or software failure of any component might require much bigger efforts to bring back the instance to production. Unavailability and/or data loss is more likely to occur.
+If you have Infinite Scale running on the same physical or virtual server where its configuration and the user data is located, a hard- or software failure of any component might require much bigger efforts to bring back the instance to production. Unavailability and/or data loss is more likely to occur.
 
 image::availability_scaling/single_server_with_disks.svg[width=130]
 
@@ -66,7 +66,7 @@ While such a setup may suffice for small environments or testing purposes, the e
 
 ==== Separating User Data
 
-The first consideration in terms of availability, flexibility and scalability should be where to store user data. It is **highly recommended** to physically separate user data from the oCIS instance and store them on a shared filesystem. See the xref:prerequisites/prerequisites.adoc#filesystems-and-external-storage[Filesystems and Shared Storage] section for supported types. 
+The first consideration in terms of availability, flexibility and scalability should be where to store user data. It is **highly recommended** to physically separate user data from the Infinite Scale instance and store them on a shared filesystem. See the xref:prerequisites/prerequisites.adoc#filesystems-and-external-storage[Filesystems and Shared Storage] section for supported types. 
 
 Separating the compute from the storage part may sound contrary with respect to the report about availability referenced above. Storage systems contribute with a static high availability number to the overall systems availability. This is because compute environments are more dynamic and storage environments are more static.
 
@@ -88,7 +88,7 @@ High Availability with its flavors active-active / active-passive layout or clus
 // do not delete, dummy necessary to have the summary not part of the above list item - antora 2.3 bug
 
 Summary::
-As there are many different ways to implement a required scenario, ownCloud support _cannot_ give advice for a particular solution that fits your needs but may be able to help you get the required oCIS component ready to run.
+As there are many different ways to implement a required scenario, ownCloud support _cannot_ give advice for a particular solution that fits your needs but may be able to help you get the required Infinite Scale component ready to run.
 +
 For availability, storing user files is by nature mandatory to be on xref:prerequisites/prerequisites.adoc#filesystems-and-external-storage[shared storage] to be accessible by the nodes and/or services.
 
@@ -143,4 +143,4 @@ Containers are independent of the underlying infrastructure. *Container are port
 image::availability_scaling/container_evolution.svg[width=800]
 
 Summary::
-Thinking about oCIS as a system providing microservices by design which is also delivered as container, you can *abstract with Kubernetes the underlying infrastructure and focus on the services to be deployed when necessary, where necessary, with the degree of automation as required*.
+Thinking about Infinite Scale as a system providing microservices by design which is also delivered as container, you can *abstract with Kubernetes the underlying infrastructure and focus on the services to be deployed when necessary, where necessary, with the degree of automation as required*.
