--- a/modules/ROOT/pages/deployment/configuration/office-integrations.adoc
+++ b/modules/ROOT/pages/deployment/configuration/office-integrations.adoc
@@ -2,7 +2,7 @@
 :toc: right
 :toclevels: 1
 
-If you install the WOPI server extension, you can integrate major office applications in oCIS:
+If you install the WOPI server extension, you can integrate major office applications in Infinite Scale:
 
 * Collabora Online
 * ONLYOFFICE
