--- a/modules/ROOT/pages/deployment/extensions/idm.adoc
+++ b/modules/ROOT/pages/deployment/extensions/idm.adoc
@@ -3,7 +3,7 @@
 
 :ext_name: idm
 
-:description: The oCIS IDM extension provides a minimal LDAP Service for oCIS. It is started as part of the the runtime and serves as a central place for storing user and group information.
+:description: The Infinite Scale IDM extension provides a minimal LDAP Service for Infinite Scale. It is started as part of the the runtime and serves as a central place for storing user and group information.
 
 == Introduction
 
@@ -11,7 +11,7 @@
 
 include::partial$deployment/extensions/beta-statement.adoc[]
 
-NOTE: It is mainly targeted at small oCIS installations. For larger setups it is recommended to replace IDM with a “real” LDAP server or to switch to an external Identity Management Solution.
+NOTE: It is mainly targeted at small Infinite Scale installations. For larger setups it is recommended to replace IDM with a “real” LDAP server or to switch to an external Identity Management Solution.
 
 NOTE: The IDM Extension is limited in its functionality. It only supports a subset of the LDAP operations (namely `BIND`, `SEARCH`, `ADD`, `MODIFY` and `DELETE`). Also IDM currently does not do any schema verification (e.g. structural vs. auxiliary object classes, require and option attributes, syntax checks, …). It is not meant as a general purpose LDAP server.
 
@@ -22,17 +22,17 @@ NOTE: The IDM Extension is limited in its functionality. It only supports a subs
 * The BaseDN of the LDAP tree is `o=libregraph-idm`.
 * IDM gives LDAP write permissions to a single user +
 (DN: `uid=libregraph,ou=sysusers,o=libregraph-idm`). Any other authenticated user has read-only access.
-* IDM stores its data in a `boltdb` file `idm/ocis.boltdb` inside the oCIS xref:deployment/general/general-info.adoc#define-the-ocis-data-path[base data directory].
+* IDM stores its data in a `boltdb` file `idm/ocis.boltdb` inside the Infinite Scale xref:deployment/general/general-info.adoc#define-the-infinite-scale-data-path[base data directory].
 
 == Configuration Hints
 
 === TLS Server Certificates
 
-By default IDM generates a self-signed certificate and key on first startup to be able to provide TLS protected services. The certificate is stored in `idm/ldap.crt` inside the oCIS xref:deployment/general/general-info.adoc#define-the-ocis-data-path[base data directory]. The key is in `idm/ldap.key` in the same directory. You can use a custom server certificate by setting the `IDM_LDAPS_CERT` and `IDM_LDAPS_KEY`.
+By default IDM generates a self-signed certificate and key on first startup to be able to provide TLS protected services. The certificate is stored in `idm/ldap.crt` inside the Infinite Scale xref:deployment/general/general-info.adoc#define-the-infinite-scale-data-path[base data directory]. The key is in `idm/ldap.key` in the same directory. You can use a custom server certificate by setting the `IDM_LDAPS_CERT` and `IDM_LDAPS_KEY`.
 
 === Default and Demo Users
 
-On startup IDM creates a set of default services users that are needed internally to provide access to IDM to other oCIS services. These users are stored in a separate subtree.
+On startup IDM creates a set of default services users that are needed internally to provide access to IDM to other Infinite Scale services. These users are stored in a separate subtree.
 
 The base DN of that subtree is: `ou=sysusers,o=libregraph-idm`.
 
@@ -47,7 +47,7 @@ This user is used by the IDP service to perform user lookups for authentication.
 * `uid=reva,ou=sysusers,o=libregraph-idm` +
 This user is used by the "reva" services `user`, `group` and `auth-basic`.
 
-IDM is also able to create xref:deployment/general/general-info.html#demo-users-and-groups[Demo Users]
+IDM is also able to create xref:deployment/general/general-info.adoc#demo-users-and-groups[Demo Users]
 upon startup. 
 
 === Access via LDAP Command Line Tools
