--- a/modules/ROOT/pages/deployment/extensions/proxy.adoc
+++ b/modules/ROOT/pages/deployment/extensions/proxy.adoc
@@ -3,7 +3,7 @@
 
 :ext_name: proxy
 
-:description: The oCIS Proxy extension provides a proxy service that routes requests to the correct extensions
+:description: The Infinite Scale Proxy extension provides a proxy service that routes requests to the correct extensions
 
 == Introduction
 
