--- a/modules/ROOT/pages/migration/index.adoc
+++ b/modules/ROOT/pages/migration/index.adoc
@@ -2,7 +2,7 @@
 :toc: right
 :toclevels: 1
 
-If you already have an ownCloud 10 running and want to start using oCIS in parallel, either to find out if you want to migrate or to prepare for migration, proceed as follows.
+If you already have an ownCloud 10 running and want to start using Infinite Scale in parallel, either to find out if you want to migrate or to prepare for migration, proceed as follows.
 
 == New ownCloud Web
 
@@ -12,7 +12,7 @@ Start using the new ownCloud Web on your ownCloud 10 server to get familiar with
 
 Introduce OpenID Connect, our primary authentication protocol. You can install the app from the ownCloud marketplace. Clients will detect the new authentication scheme when their current way of authenticating returns an error. Users will then have to reauthorize at the OpenID Connect IdP, which again, may be configured to skip the consent step for trusted clients.
 
-There are multiple products that can be used as an OpenID Connect IdP. LibreGraph Connect is embedded in oCIS. Alternatives include Keycloak or Ping. Refer to the corresponding setup instructions for the product you intend to use.
+There are multiple products that can be used as an OpenID Connect IdP. LibreGraph Connect is embedded in Infinite Scale. Alternatives include Keycloak or Ping. Refer to the corresponding setup instructions for the product you intend to use.
 
 When OpenID Connect support is enabled verify that all clients can login:
 
@@ -22,22 +22,22 @@ When OpenID Connect support is enabled verify that all clients can login:
 * Android client
 * iOS client
 
-NOTE: Legacy clients relying on Basic auth or app passwords need to be migrated to OpenId Connect to work with oCIS. For a transition period Basic auth in oCIS can be enabled with `PROXY_ENABLE_BASIC_AUTH=true`, but we strongly recommend adopting OpenID Connect for other tools as well. 
+NOTE: Legacy clients relying on Basic auth or app passwords need to be migrated to OpenId Connect to work with Infinite Scale. For a transition period Basic auth in Infinite Scale can be enabled with `PROXY_ENABLE_BASIC_AUTH=true`, but we strongly recommend adopting OpenID Connect for other tools as well. 
 
-While OpenID Connect providers will send an `iss` and `sub` claim that relying parties (services like oCIS or ownCloud 10) can use to identify users, we recommend introducing a dedicated, globally unique, persistent, non-reassignable user identifier like a UUID for every user. This `ownclouduuid` should be sent as an additional claim to save additional lookups on the server side. It will become the user id in oCIS, e.g. when searching for recipients, the `ownclouduuid` will be used to persist permissions with the share manager. It serves a different purpose than the ownCloud 10 username, which is used to log in. Using UUIDs we can not only mitigate username collisions when merging multiple instances but also allow renaming users after the migration to oCIS has been completed.
+While OpenID Connect providers will send an `iss` and `sub` claim that relying parties (services like Infinite Scale or ownCloud 10) can use to identify users, we recommend introducing a dedicated, globally unique, persistent, non-reassignable user identifier like a UUID for every user. This `ownclouduuid` should be sent as an additional claim to save additional lookups on the server side. It will become the user id in Infinite Scale, e.g. when searching for recipients, the `ownclouduuid` will be used to persist permissions with the share manager. It serves a different purpose than the ownCloud 10 username, which is used to log in. Using UUIDs we can not only mitigate username collisions when merging multiple instances but also allow renaming users after the migration to Infinite Scale has been completed.
 
 == Use ownCloud Infinite Space internally
 
-Before letting oCIS handle end user requests, make it available in the internal network first. By subsequently adding services, you can add functionality and verify the services work as intended.
+Before letting Infinite Scale handle end user requests, make it available in the internal network first. By subsequently adding services, you can add functionality and verify the services work as intended.
 
-Start oCIS backend and make read-only tests on existing data using the `owncloudsql` storage driver which will read (and write):
+Start Infinite Scale backend and make read-only tests on existing data using the `owncloudsql` storage driver which will read (and write):
 
 * blobs from the same data directory layout as in ownCloud 10,
-* metadata from the ownCloud 10 database, i.e. the oCIS share manager will read share information from the ownCloud database using an ownCloud driver.
+* metadata from the ownCloud 10 database, i.e. the Infinite Scale share manager will read share information from the ownCloud database using an ownCloud driver.
 
-Deploy oCIS storage provider with owncloudsql driver. Set `read_only: true` in the storage provider config and use the command line tool to list files using the CS3 API.
+Deploy Infinite Scale storage provider with owncloudsql driver. Set `read_only: true` in the storage provider config and use the command line tool to list files using the CS3 API.
 
-Multiple ownCloud instances can be merged into one oCIS instance. To prevent a numeric ID collision, the file IDs will be prefixed with a new storage space ID which is used by oCIS to route requests to the correct storage provider. See Stage 8 below.
+Multiple ownCloud instances can be merged into one Infinite Scale instance. To prevent a numeric ID collision, the file IDs will be prefixed with a new storage space ID which is used by Infinite Scale to route requests to the correct storage provider. See Stage 8 below.
 
 // Proper Ref for Stage 8 later.
 
